<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/darkPurple"
    app:cardCornerRadius="3dp"
    android:elevation="10dp"
    android:layout_gravity="center"
    tools:context=".AboutActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="100dp"
                android:scaleType="fitXY"
                android:src="@drawable/circle_logo"
                android:contentDescription="@string/todo">

            </ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/version_1_0"
                android:textSize="18sp"
                android:textColor="@color/backgroundColor"
                android:layout_marginStart="20dp"
                android:layout_marginTop="25dp">

            </TextView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/developer_contact"
                android:textColor="@color/backgroundColor"
                android:textSize="22sp"
                android:layout_gravity="center"
                android:layout_marginTop="2dp">

            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nshakya303_gmail_com"
                android:textColor="@color/backgroundColor"
                android:textSize="16sp"
                android:layout_gravity="center"
                android:layout_marginTop="2dp">

            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/contact"
                android:text="@string/click_here_to_contact"
                android:textColor="@color/darkPurple"
                android:background="@color/lightPurple"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:padding="4dp">

            </TextView>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>