<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragment.IndiaFrag"
    android:fillViewport="true"

>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:cardElevation="5dp"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_cases"
                android:id="@+id/totalCases"
                android:fontFamily="@font/lato_bold"
                android:textSize="20sp"
                android:textColor="@color/textColor"
                tools:ignore="RelativeOverlap">

            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/totalCaseInd"
                android:text="@string/loading"
                android:textSize="20sp"
                android:fontFamily="@font/lato_bold"
                android:layout_alignParentEnd="true"
                android:textColor="@color/textColor"
                tools:ignore="RelativeOverlap">

            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/totalCaseInd"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/lato_bold"
                android:text="@string/total_recovered"
                android:textColor="@color/greenColor"
                android:textSize="20sp">

            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/totalCaseRec"
                android:layout_below="@id/totalCaseInd"
                android:layout_marginTop="5dp"
                android:textColor="@color/greenColor"
                android:fontFamily="@font/lato_bold"
                android:text="@string/loading"
                android:layout_alignParentEnd="true"
                android:textSize="20sp">

            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/totalCaseRec"
                android:layout_marginTop="5dp"
                android:text="@string/total_deaths"
                android:fontFamily="@font/lato_bold"
                android:textColor="@color/redColor"
                android:textSize="20sp">

            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/totalDeathInd"
                android:layout_below="@id/totalCaseRec"
                android:layout_marginTop="5dp"
                android:textColor="@color/redColor"
                android:text="@string/loading"
                android:fontFamily="@font/lato_bold"
                android:layout_alignParentEnd="true"
                android:textSize="20sp">

            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/totalDeathInd"
                android:layout_marginTop="5dp"
                android:text="@string/total_active_cases"
                android:fontFamily="@font/lato_bold"
                android:textColor="@color/blueColor"
                android:textSize="20sp">

            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/totalActiveCase"
                android:layout_below="@id/totalDeathInd"
                android:layout_marginTop="5dp"
                android:textColor="@color/blueColor"
                android:text="@string/loading"
                android:fontFamily="@font/lato_bold"
                android:layout_alignParentEnd="true"
                android:textSize="20sp">

            </TextView>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:background="@drawable/back_solid">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/darkPurple"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/state_wise"
                android:layout_margin="1dp"
                android:textStyle="italic"
                android:textColor="@color/backgroundColor"
                android:textAlignment="center"
                android:textSize="25sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Total Cases"
                android:layout_margin="1dp"
                android:textStyle="italic"
                android:textColor="@color/backgroundColor"
                android:textAlignment="center"
                android:textSize="25sp"/>

        </LinearLayout>



        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/recyclerView">

        </androidx.recyclerview.widget.RecyclerView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/backgroundColor">

    </LinearLayout>

</LinearLayout>

</ScrollView>