<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:fitsSystemWindows="true"
        android:layout_height="192dp"
        android:layout_width="match_parent">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collLayout"
            android:layout_width="match_parent"
            android:layout_height="195dp"
            app:collapsedTitleTextAppearance="@style/collapsedText"
            app:expandedTitleTextAppearance="@style/expandText"
            app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed|exitUntilCollapsed"
            app:title="Covid-19"
            app:toolbarId="@+id/toolbar">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/t1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/seguisb"
                    android:text="@string/worldwide"
                    android:textAlignment="center"
                    android:textColor="#ffffff"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/t2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/seguisb"
                    android:text="@string/dashboard"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:textColor="#ffffff"
                    android:textSize="23sp" />

                <TextView
                    android:id="@+id/t3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/seguisb"
                    android:textStyle="bold"
                    android:text="@string/covid_19_live_update"
                    android:textAlignment="center"
                    android:textColor="#ffffff"
                    android:textSize="15sp"
                    />

            </LinearLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                app:navigationIcon="@drawable/ic_menu_black_24dp">

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="717dp"
        android:scrollbars="vertical"
        android:scrollbarStyle="insideInset"
        android:fillViewport="true"
        android:scrollbarThumbVertical="@drawable/scroll_thumb"
        android:scrollbarSize="7dp"
        android:fadeScrollbars="false"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <FrameLayout
                android:id="@+id/container"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

    </androidx.core.widget.NestedScrollView>


        <com.ismaeldivita.chipnavigation.ChipNavigationBar
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:id="@+id/bottom_Menu"
            android:layout_gravity="bottom"
            android:background="@drawable/round"
            android:elevation="18dp"
            android:padding="8dp"
            app:cnb_iconSize="30sp"
            app:cnb_menuResource="@menu/bottom_menu"
            app:cnb_unselectedColor="@color/backgroundColor"
            />



    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start">


        <com.google.android.material.navigation.NavigationView
            android:id="@+id/navBar"
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:background="@drawable/bg_drawer"
            android:scrollbarSize="30sp"
            app:headerLayout="@layout/header"
            app:itemIconSize="20sp"
            app:itemTextAppearance="@style/Widget.AppCompat.DrawerArrowToggle"
            app:menu="@menu/drawer_menu">


        </com.google.android.material.navigation.NavigationView>


    </LinearLayout>



</androidx.drawerlayout.widget.DrawerLayout>